# cltrier_nlp

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  Session-2.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  search.html
cltrier_nlp/: __init__.py  __main__.py
cltrier_nlp/corpus/: __init__.py  sentence.py  util.py
cltrier_nlp/encoder/: __init__.py  batch.py  pooler.py  transformer.py  transformer_pooler.py
cltrier_nlp/functional/: __init__.py  neural.py  text.py
cltrier_nlp/trainer/: __init__.py  metric.py  progress.py
cltrier_nlp/util/: __init__.py
cltrier_nlp/utility/: __init__.py  map.py  types.py
corpus/: index.html
corpus/sentence/: index.html
data/: voltair-candide.txt
encoder/: index.html
encoder/batch/: index.html
encoder/pooler/: index.html
examples/: 0.1--Basics-Corpus.ipynb  0.1--Corpus-Basics.ipynb  0.2--Encoder-Basics.ipynb  2.1--Application-IMDb-Classification.ipynb  2.1--Application-Language-Classification.ipynb  2.2--Application-IMDb-Classification-Prompting.ipynb  2.3--Application-IMDb-Visualization.ipynb  3.1--Naive-Text-Generation.ipynb
examples/data/: corpus.txt
functional/: index.html
functional/neural/: index.html
functional/text/: index.html
scripts/: gen_docs_pages.py
search/: search_index.json
src/: __init__.py  __main__.py
src/corpus/: __init__.py  util.py
tests/: test_corpus.py  test_sentence.py
trainer/: index.html
trainer/metric/: index.html
trainer/progress/: index.html
utility/: index.html
utility/map/: index.html
utility/types/: index.html
