[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cltrier_nlp"
version = "0.1.3"
description = ""
authors = ["Simon Münker <muenker@uni-trier.de>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/simon-muenker/cltrier_nlp"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing"
]
packages = [{ include = "cltrier_nlp" }]

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"
pydantic = "^2.7.1"
langdetect = "^1.0.9"
langcodes = "^3.4.0"
transformers = "^4.40.1"
torch = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
jupyter = "^1.0.0"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
pre-commit = "^3.7.0"
black = "^24.4.2"
ruff = "^0.4.2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
testpaths = [
    "tests",
]

[tool.black]
line-length = 96

[tool.ruff]
line-length = 96
